<resources>
    <string name="app_name">Student Peer Review Apps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">user@1utar.my</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_overview">Review Assignment</string>
    <string name="menu_newTask">Post new Task</string>
    <string name="menu_postResult">My result</string>
    <string name="menu_task">Task</string>
    <string name="menu_students">Manage Students</string>
    <string name="menu_review">Review Assignment</string>
    <string name="menu_time">Timeline</string>
    <string name="menu_parts">Task Distribution</string>
    <string name="menu_upload">Upload Assignment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_logOut">Log Out</string>
    <string name="title_dlg_placeholder">Title</string>
    <string name="description_dlg_placeholder">Description</string>
    <string name="label_student">Students</string>
    <string name="result_description">Please write your description.</string>

</resources>